tests/Fixture/Annotation/Route/Valid/NotRequestHandler.php
<?php declare(strict_types=1);

namespace Sunrise\Http\Router\Tests\Fixture\Annotation\Route\Valid;

/**
 * @Route(
 *   name="test",
 *   path="/test",
 *   methods={"GET"},
 * )
 */
class NotRequestHandler
{
}
