tests/Fixture/Annotation/Route/Invalid/AttributesNotArray/AttributesNotArray.php
<?php declare(strict_types=1);

namespace Sunrise\Http\Router\Tests\Fixture\Annotation\Route\Invalid;

use Sunrise\Http\Router\Tests\Fixture\BlankRequestHandler;

/**
 * @Route(
 *   name="home",
 *   path="/",
 *   methods={"GET"},
 *   attributes="foo"
 * )
 */
class AttributesNotArray extends BlankRequestHandler
{
}
